# jagged

./: Cargo.toml  README.md
examples/: read_file.rs
src/: archive.rs  lib.rs  read.rs  util.rs  write.rs
